--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,39 @@
-node_modules/
-.cache/
-public
-src/gatsby-types.d.ts
+# Dependencies
+/node_modules/
+
+# Gatsby files
+/.cache/
+/public
+/src/gatsby-types.d.ts
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build directories
+/dist
+/build
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE/Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Optional npm cache & logs
+.npm/
+logs
+*.log
+npm-debug.log*
