--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"private": true,
 	"description": "chomp",
 	"author": "Harr-Yates",
-	"keywords": ["gatsby"],
+	"keywords": [
+		"gatsby"
+	],
 	"scripts": {
 		"develop": "gatsby develop",
 		"dev": "gatsby develop",
@@ -21,6 +23,7 @@
 		"gatsby-source-filesystem": "^5.13.1",
 		"gatsby-transformer-sharp": "^5.13.1",
 		"normalize.css": "^8.0.1",
+		"punycode": "^2.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.0.1"
@@ -30,5 +33,8 @@
 		"@types/react": "^18.2.55",
 		"@types/react-dom": "^18.2.19",
 		"typescript": "^5.3.3"
+	},
+	"resolutions": {
+		"punycode": "^2.1.1"
 	}
 }
