--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"gatsby": "^5.13.3",
 		"gatsby-plugin-image": "^3.13.1",
 		"gatsby-plugin-sharp": "^5.13.1",
+		"gatsby-source-contentful": "^8.13.2",
 		"gatsby-source-filesystem": "^5.13.1",
 		"gatsby-transformer-sharp": "^5.13.1",
 		"normalize.css": "^8.0.1",
