--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"gatsby": "^5.13.3",
 		"gatsby-plugin-image": "^3.13.1",
+		"gatsby-plugin-react-helmet": "^6.13.1",
 		"gatsby-plugin-sharp": "^5.13.1",
 		"gatsby-source-contentful": "^8.13.2",
 		"gatsby-source-filesystem": "^5.13.1",
@@ -27,12 +28,14 @@
 		"punycode": "^2.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
 		"react-icons": "^5.0.1"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.19",
 		"@types/react": "^18.2.55",
 		"@types/react-dom": "^18.2.19",
+		"@types/react-helmet": "^6.1.11",
 		"typescript": "^5.3.3"
 	},
 	"resolutions": {
